fix category details and product details